@@ -1,3 +1,4 @@
+* [Bug 1324] support bracketed IPv6 numeric addresses for restrict.
 (4.2.5p224) 2009/09/29 Released by Harlan Stenn <stenn@ntp.org>
 * Clockhop and documentation fixes from Dave Mills.
 * Remove "tos maxhop" ntp.conf knob.
